--- a/theme.less
+++ b/theme.less
@@ -1,4 +1,4 @@
 @import "../nodebb-theme-persona/theme";
-.navbar .navbar-default .navbar-fixed-top .header{
+#header-menu{
   background-color: black;
 }
