Nav Icon COlor Changed

--- a/theme.less
+++ b/theme.less
@@ -2,3 +2,12 @@
 #header-menu{
   background-color: #e74c3c;
 }
+.navbar-default .navbar-nav>li>a{
+  color: #ffffff;
+}
+.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover{
+  color: #cbcbcb;
+}
+.navbar-default .btn-link{
+  color: #ffffff;
+}
